集成zk dubbo的功能内容

--- a/zkcustomer/src/main/resources/application.properties
+++ b/zkcustomer/src/main/resources/application.properties
@@ -1,29 +1,6 @@
 # Spring boot application
-spring.application.name=customer
+spring.application.name=zkcustomer
 server.port=8989
 
-demo.service.version=1.0.0
-
-
-
-
-
-
-
-# Dubbo Config properties
-## ApplicationConfig Bean
-dubbo.application.id = dubbo-consumer-demo
-dubbo.application.name = dubbo-consumer-demo
-
-## ProtocolConfig Bean
-dubbo.protocol.id = dubbo
-dubbo.protocol.name = dubbo
-dubbo.protocol.port = 20088
-
-dubbo.registry.id = my-registry1
-## Dubbo Registry
-embedded.zookeeper.port = 2181
-dubbo.registry.address=zookeeper://132.232.123.169:${embedded.zookeeper.port}
-dubbo.registry.protocol = zookeeper
-dubbo.registry.timeout = 30000
-dubbo.protocol.threads = 10
+dubbo.application.name=zkcustomer
+dubbo.registry.address=zookeeper://132.232.123.169:2181
