--- a/zkcustomer/pom.xml
+++ b/zkcustomer/pom.xml
@@ -2,6 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <groupId>com.samlai</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <artifactId>zkcustomer</artifactId>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -13,12 +19,10 @@
     <properties>
         <java.version>1.8</java.version>
         <logback.version>1.1.3</logback.version>
-        <dubbo.version>2.7.0</dubbo.version>
         <zookeeper.version>3.4.8</zookeeper.version>
         <curator.version>2.9.1</curator.version>
     </properties>
 
-    <artifactId>zkcustomer</artifactId>
     <dependencies>
 
         <dependency>
@@ -38,14 +42,6 @@
         </dependency>
 
 
-        <!-- Dubbo Spring Boot Starter -->
-        <dependency>
-            <groupId>com.alibaba.spring.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
-
         <dependency>
             <groupId>com.samlai</groupId>
             <artifactId>api</artifactId>
@@ -60,25 +56,13 @@
             <scope>test</scope>
         </dependency>
 
-
-        <!-- Zookeeper -->
         <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>${zookeeper.version}</version>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>0.2.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>${curator.version}</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-            <version>${curator.version}</version>
-        </dependency>
 
 
     </dependencies>
