--- a/zkprovider/pom.xml
+++ b/zkprovider/pom.xml
@@ -2,6 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+
+    <groupId>com.samlai</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>zkprovider</artifactId>
+    <packaging>jar</packaging>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -10,7 +17,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zkprovider</artifactId>
+
 
 
     <properties>
@@ -18,6 +25,7 @@
         <zookeeper.version>3.4.8</zookeeper.version>
         <curator.version>2.9.1</curator.version>
         <dubbo.version>2.7.0</dubbo.version>
+        <logback.version>1.1.3</logback.version>
     </properties>
 
     <dependencies>
@@ -38,38 +46,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Dubbo -->
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.7.0</version>
+            <version>0.2.0</version>
         </dependency>
 
-
-        <!-- Zookeeper -->
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>${zookeeper.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>${curator.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-            <version>${curator.version}</version>
-        </dependency>
 
     </dependencies>
 
